--- a/estilos/index.css
+++ b/estilos/index.css
@@ -1,4 +1,8 @@
-/* --- ESTILOS PÁGINA INDEX Y CARRITO --- */
+/* --- ESTILOS PÁGINA INDEX --- */
+
+.nav-home {
+    color: white !important;
+}
 
 h1, h2 {
     font-size: 4.688rem;
@@ -35,43 +39,3 @@ h1, h2 {
     }
 }
 
-.carrito-card {
-    height: 300px;
-}
-
-.card-height {
-    height: 375px;
-}
-
-@media (max-width: 576px) {
-    .card-height {
-        height: 400px;
-    }
-}
-
-@media (max-width: 768px) {
-    .card-height {
-        height: 450px;
-    }
-}
-
-.card-body {
-    display: flex;
-    flex-flow: column;
-}
-
-.boton-catalogo {
-    margin-top: auto;
-    background: red !important;
-    border: 2px solid red !important;
-    border-radius: 5px;
-    transition: .3s;
-    color: white;
-}
-
-.boton-catalogo:hover {
-    background: rgb(255, 51, 51) !important;
-    border: 2px solid rgb(255, 51, 51) !important;
-    transition: .3s;
-    color: rgb(223, 223, 223);
-}
