--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -54,10 +54,6 @@ a:hover {
   color: rgb(216, 216, 216) !important;
 }
 
-.activo {
-  color: white !important;
-}
-
 .nav-link:hover {
   text-decoration: underline;
 }
@@ -73,4 +69,52 @@ a:hover {
 /*FOOTER*/
 .black {
   color: black !important;
+}
+
+
+/*INDEX Y CARRITO*/
+.carrito-card {
+  height: 300px;
+}
+
+.card-height {
+  height: 375px;
+}
+
+@media (max-width: 576px) {
+  .card-height {
+      height: 400px;
+  }
+}
+
+@media (max-width: 768px) {
+  .card-height {
+      height: 450px;
+  }
+}
+
+.card-body {
+  display: flex;
+  flex-flow: column;
+}
+
+.boton-catalogo {
+  margin-top: auto;
+  background: red !important;
+  border: 2px solid red !important;
+  border-radius: 5px;
+  transition: .3s;
+  color: white;
+}
+
+.boton-catalogo:hover {
+  background: rgb(255, 51, 51) !important;
+  border: 2px solid rgb(255, 51, 51) !important;
+  transition: .3s;
+  color: rgb(223, 223, 223);
+}
+
+/*CUENTA Y ADMINISTRADOR*/
+table {
+  border: 2px solid;
 }
