--- a/estilos/administrador.css
+++ b/estilos/administrador.css
@@ -6,30 +6,50 @@
 
 .boton-crud {
     display: block;
-    width: 45%;
     padding: 5px;
     text-decoration: none;
     text-align: center;
+    color: white;
+}
+
+.boton-crud:hover {
+    color: white;
+}
+
+.boton-destacar {
+    background: rgb(255, 196, 0);
+}
+
+.boton-destacar:hover {
+    background: rgb(255, 214, 78);
+}
+
+.boton-quitar-destacado {
+    background: rgb(255, 72, 0);
+}
+
+.boton-quitar-destacado:hover {
+    background: rgb(255, 111, 55);
 }
 
 .boton-editar {
     background: gray;
-    color: white;
 }
 
 .boton-editar:hover {
-    background: rgb(190, 190, 190);
-    color: white;
+    background: rgb(180, 180, 180);
 }
 
 .boton-eliminar {
     background: red;
-    color: white;
 }
 
 .boton-eliminar:hover {
     background: rgb(255, 72, 72);
-    color: white;
+}
+
+td {
+    line-height: 26px;
 }
 
 input, select {
@@ -37,6 +57,10 @@ input, select {
 }
 
 @media (min-width: 768px) {
+    td {
+        line-height: 36px;
+    }
+
     input, select {
         width: 25%;
     }
@@ -61,4 +85,8 @@ input, select {
     border: 2px solid rgb(255, 51, 51) !important;
     transition: .3s;
     color: rgb(223, 223, 223);
+}
+
+.checkbox {
+    width: 13px;
 }
