--- a/estilos/carrito.css
+++ b/estilos/carrito.css
@@ -1,5 +1,30 @@
 /* --- ESTILOS PÁGINA CARRITO --- */
 
 .nav-carrito {
-    color: white !important;
+  color: white !important;
+}
+
+.logo-plataforma {
+  bottom: 62%;
+  right: 3%;
+  border-radius: 25%;
+  box-shadow: 0px 0px 5px black;
+}
+
+@media (min-width: 768px) {
+  .logo-plataforma {
+    bottom: 62%;
+  }
+}
+
+@media (min-width: 992px) {
+  .logo-plataforma {
+    bottom: 66.5%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .logo-plataforma {
+    bottom: 59%;
+  }
 }
