--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -71,26 +71,20 @@ a:hover {
   color: black !important;
 }
 
+/*PAGINACIÓN*/
+.page-link {
+  color: black !important;
+}
 
-/*INDEX Y CARRITO*/
+.pagina-actual {
+  background: red !important;
+  border: 1px solid red !important;
+  color: white !important;
+}
+
+/*INDEX, CARRITO Y CATALOGO*/
 .carrito-card {
   height: 300px;
-}
-
-.card-height {
-  height: 375px;
-}
-
-@media (max-width: 576px) {
-  .card-height {
-      height: 400px;
-  }
-}
-
-@media (max-width: 768px) {
-  .card-height {
-      height: 450px;
-  }
 }
 
 .card-body {
@@ -113,6 +107,21 @@ a:hover {
   transition: .3s;
   color: rgb(223, 223, 223);
 }
+
+.boton-catalogo-deshabilitado {
+  margin-top: auto;
+  background: gray !important;
+  border: 2px solid gray !important;
+  border-radius: 5px;
+  color: white;
+  cursor: default;
+}
+
+.boton-catalogo-deshabilitado:hover {
+  color: white;
+}
+
+
 
 /*CUENTA Y ADMINISTRADOR*/
 table {
